Fixed search bar z-index on mobile

--- a/public/scss/components/_header.scss
+++ b/public/scss/components/_header.scss
@@ -7,6 +7,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
   @include breakpoint(large){
     width: 15em;
     height: 100vh;
